--- a/docker/composes/80_drone/gitlab/docker-compose.yml
+++ b/docker/composes/80_drone/gitlab/docker-compose.yml
@@ -1,5 +1,3 @@
-# https://blog.wu-boy.com/2019/08/install-drone-with-gitlab-in-10-minutes/
-
 version: "3"
 
 services:
@@ -16,7 +14,7 @@ services:
       - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
       - DRONE_AGENTS_ENABLED=true
       # Gitlab Config
-      - DRONE_GITLAB_SERVER=${DRONE_GITLAB_SERVER}
+      - DRONE_GITLAB_SERVER=https://gitlab.com
       - DRONE_GITLAB_CLIENT_ID=${DRONE_GITLAB_CLIENT_ID}
       - DRONE_GITLAB_CLIENT_SECRET=${DRONE_GITLAB_CLIENT_SECRET}
       - DRONE_LOGS_PRETTY=true
