--- a/docker/composes/80_drone/drone-gitlab/docker-compose.yml
+++ b/docker/composes/80_drone/drone-gitlab/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 version: "3"
 
 services:
@@ -8,9 +6,8 @@ services:
     container_name: drone-server
     ports:
       - 8081:80
-      - 8443:443
     volumes:
-      - drone-server:/data
+      - drone_data:/data
     restart: always
     environment:
       - DRONE_SERVER_HOST=${DRONE_SERVER_HOST}
@@ -38,4 +35,4 @@ services:
       - DRONE_RUNNER_CAPACITY=3
 
 volumes:
-  drone-server: {}
+  drone_data: {}
