--- a/docker/composes/80_drone/drone-gitlab/docker-compose.yml
+++ b/docker/composes/80_drone/drone-gitlab/docker-compose.yml
@@ -8,12 +8,15 @@ services:
       - 8081:80
     volumes:
       - drone_data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: always
     environment:
       - DRONE_SERVER_HOST=${DRONE_SERVER_HOST}
       - DRONE_SERVER_PROTO=${DRONE_SERVER_PROTO}
+      - DRONE_TLS_AUTOCERT=false
       - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
       - DRONE_AGENTS_ENABLED=true
+      - DRONE_RUNNER_CAPACITY=3
       # GitLab
       - DRONE_GITLAB_SERVER=https://gitlab.com
       - DRONE_GITLAB_CLIENT_ID=${DRONE_GITLAB_CLIENT_ID}
