zabbix-server , zabbix-proxy, zabbix-agent

--- a/Zabbix/conf/zabbix_agentd.conf
+++ b/Zabbix/conf/zabbix_agentd.conf
@@ -232,6 +232,7 @@ ServerActive=zabbix-server:10051
 # Range: 1-30
 # Default:
 # Timeout=3
+#@@ Timeout: 使用者執行的腳本, 最久只允許 Timeout 秒鐘
 
 ### Option: AllowRoot
 #       Allow the agent to run as 'root'. If disabled and the agent is started by 'root', the agent
