--- a/Zabbix/conf/zabbix_server.conf
+++ b/Zabbix/conf/zabbix_server.conf
@@ -468,6 +468,7 @@ StartJavaPollers=5
 # Range: 1-30
 # Default:
 # Timeout=3
+#@@ Timeout: Zabbix Agent 執行的腳本, 最久只允許 Timeout 秒鐘
 
 
 ### Option: TrapperTimeout
