多項修改, mysql & linux & zabbix

--- a/Zabbix/conf4.0/zabbix_agentd.conf
+++ b/Zabbix/conf4.0/zabbix_agentd.conf
@@ -117,6 +117,8 @@ Server=zabbix-server
 # Range: 0-100
 # Default:
 # StartAgents=3
+#@@ Agent 可 simultaneously 執行的 process 數量. 像是有些 scripts 會執行很久, 則需要開多些 process, 以免 block
+#@@ 此為 Passive Check 的數量. Active Check 則與此配置無關
 
 ##### Active checks related
 
@@ -231,8 +233,7 @@ ServerActive=zabbix-server:10051
 # Mandatory: no
 # Range: 1-30
 # Default:
-# Timeout=3
-#@@ Timeout: 使用者執行的腳本, 最久只允許 Timeout 秒鐘
+# Timeout=3     #@@ Timeout: 使用者執行的腳本, 最久只允許多少秒鐘
 
 ### Option: AllowRoot
 #       Allow the agent to run as 'root'. If disabled and the agent is started by 'root', the agent
