--- a/Zabbix/conf4.0/zabbix_server.conf
+++ b/Zabbix/conf4.0/zabbix_server.conf
@@ -83,7 +83,7 @@ LogType=console
 # Mandatory: no
 # Default:
 # DBHost=localhost
-DBHost=localhost            #@@
+DBHost=localhost        #@@ 儲存資料的 DB
 
 ### Option: DBName
 #       Database name.
@@ -92,7 +92,7 @@ DBHost=localhost            #@@
 # Default:
 # DBName=
 
-DBName=zabbix               #@@ DB
+DBName=zabbix       #@@ 儲存資料的 DB
 
 ### Option: DBSchema
 #       Schema name. Used for IBM DB2 and PostgreSQL.
@@ -467,8 +467,7 @@ StartJavaPollers=5
 # Mandatory: no
 # Range: 1-30
 # Default:
-# Timeout=3
-#@@ Timeout: Zabbix Agent 執行的腳本, 最久只允許 Timeout 秒鐘
+# Timeout=3     # @@ Zabbix Agent 執行的腳本, 最久只允許多少秒鐘
 
 
 ### Option: TrapperTimeout
