--- a/docker/composes/3306_mariadb/docker-compose.yml
+++ b/docker/composes/3306_mariadb/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     hostname: mariadb
     restart: on-failure
     logging:
+      driver: "local"
       options:
         max-size: "10m"
         max-file: "3"
