--- a/docker/composes/10050_zabbix_server/web/docker-compose.yml
+++ b/docker/composes/10050_zabbix_server/web/docker-compose.yml
@@ -2,25 +2,24 @@ version: "3"
 
 services:
   zabbix_web:
-    image: zabbix/zabbix-web-nginx-mysql:centos-4.0.27
-    container_name: zabbix_web
-    hostname: zabbix_web
+    # image: zabbix/zabbix-web-nginx-mysql:centos-4.0.27
+    image: web
+    # image: zabbix_web:4.0.27
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: web
+    hostname: web
     restart: always
     ports:
       - "8080:8080"
-    volumes:
-      - ./init_db:/docker-entrypoint-initdb.d
-      - ./conf.d/:/etc/mysql/conf.d:rw
-      - /etc/localtime:/etc/localtime:ro
-      - zabbix_db:/var/lib/mysql
-      - zabbix_db_log:/var/log/mysql
+      - "80:80"
     environment:
       ZBX_SERVER_HOST: ${ZBX_SERVER_HOST}
       DB_SERVER_HOST: ${DB_SERVER_HOST}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       PHP_TZ: ${PHP_TZ}
     networks:
       - zabbix_net
@@ -29,3 +28,7 @@ networks:
   zabbix_net:
     name: zabbix_net
     driver: bridge
+
+volumes:
+  zabbix_web_log:
+    name: zabbix_web_log
