--- a/docker/composes/27017_mongodb/replicaset/mongod.conf
+++ b/docker/composes/27017_mongodb/replicaset/mongod.conf
@@ -1,9 +1,52 @@
-replication:
-   replSetName: "rs0"
+# mongod.conf
 
+# for documentation of all options, see:
+#   http://docs.mongodb.org/manual/reference/configuration-options/
+
+# where to write logging data.
+systemLog:
+  path: /var/log/mongodb/mongod.log
+  logAppend: true
+  destination: file
+
+#processManagement:
+  
+#cloud:
+
+# network interfaces
 net:
-   bindIpAll: true
+  port: 27017
+  bindIpAll: true
+  unixDomainSocket:
+    filePermissions: 0760
 
 security:
   keyFile: /etc/keyfile
- 
+  authorization: enabled
+
+setParameter:
+  maxTransactionLockRequestTimeoutMillis: 3000
+
+# Where and how to store data.
+storage:
+  dbPath: /data/db
+  journal:
+    enabled: true
+  engine: wiredTiger
+    #wiredTiger:
+
+#operationProfiling:
+
+replication:
+  oplogSizeMB: 64
+  # For Testing Purpose: change back to hqaReplSet afterwards
+  # replSetName: hqaReplSet
+  replSetName: rs0
+
+#sharding:
+
+## Enterprise-Only Options ##
+
+#auditLog:
+
+#snmp:
