all for mongodb

--- a/docker/composes/27017_mongodb/replicaset/docker-compose.yml
+++ b/docker/composes/27017_mongodb/replicaset/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "27017:27017"
     environment:
-      - TZ=Asia/Shanghai
+      - TZ=Asia/Taipei
       - ADMIN_USER=${ADMIN_USER}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - APP_TOKEN=${APP_TOKEN}
