docker CGroups 及 metrics, 及部分零散更新與筆記整理

--- a/docker/daemon.jsonc
+++ b/docker/daemon.jsonc
@@ -2,5 +2,6 @@
 
 {
      // logging-driver - https://docs.docker.com/config/containers/logging/configure/
-    "log-driver": "syslog"
+    "log-driver": "syslog",
+    "data-root": "/data/docker"
 }
