--- a/docker/composes/10050_zabbix_server/web/init/conf/nginx/nginx.conf
+++ b/docker/composes/10050_zabbix_server/web/init/conf/nginx/nginx.conf
@@ -23,6 +23,10 @@ http {
     access_log /dev/fd/1 main;
     error_log /dev/fd/2 error;
 
+    real_ip_header     X-Forwarded-For;
+    real_ip_recursive  on;
+    set_real_ip_from   0.0.0.0;
+
     client_body_temp_path /tmp/client_body 1 2;
     proxy_temp_path /tmp/proxy 1 2;
     fastcgi_temp_path /tmp/fastcgi 1 2;
