--- a/docker/composes/10050_zabbix_server/agent/Dockerfile
+++ b/docker/composes/10050_zabbix_server/agent/Dockerfile
@@ -1,65 +1,44 @@
 FROM centos:7
 
-LABEL org.opencontainers.image.title="Zabbix server (MySQL)" \
+LABEL org.opencontainers.image.title="Zabbix agent" \
       org.opencontainers.image.authors="Alexey Pustovalov <alexey.pustovalov@zabbix.com>" \
       org.opencontainers.image.vendor="Zabbix LLC" \
       org.opencontainers.image.url="https://zabbix.com/" \
-      org.opencontainers.image.description="Zabbix server with MySQL database support" \
+      org.opencontainers.image.description="Zabbix agent is deployed on a monitoring target to actively monitor local resources and applications" \
       org.opencontainers.image.licenses="GPL v2.0" \
       org.opencontainers.image.documentation="https://www.zabbix.com/documentation/${MAJOR_VERSION}/manual/installation/containers" \
       org.opencontainers.image.version="${ZBX_VERSION}" \
       org.opencontainers.image.source="${ZBX_SOURCES}" \
-      info.image.info="Zabbix Server MySQL 4.0.27" \
-      info.image.reference="https://github.com/zabbix/zabbix-docker/blob/4.0.27/server-mysql/centos/Dockerfile" \
+      info.image.info="Zabbix Agent 4.0.27" \
+      info.image.reference="https://github.com/zabbix/zabbix-docker/blob/4.0.27/agent/centos/Dockerfile" \
       info.user.github="https://github.com/cool21540125/docker-zabbix-server"
+
 
 STOPSIGNAL SIGTERM
 
 ENV TINI_VERSION=v0.19.0
+ENV TERM=xterm ZBX_VERSION=${ZBX_VERSION} ZBX_SOURCES=${ZBX_SOURCES}
 
 RUN set -eux && \
     groupadd -g 1995 --system zabbix && \
     # adduser -r --shell /sbin/nologin \
-    #         -g zabbix -G dialout -G root \
+    #         -g zabbix -G root \
     #         -d /var/lib/zabbix/ -u 1997 \
     #     zabbix && \
     adduser -r --shell /usr/bin/bash \
             -g zabbix -G root \
             -d /var/lib/zabbix/ -u 1997 zabbix && \
     mkdir -p /etc/zabbix && \
+    mkdir -p /etc/zabbix/zabbix_agentd.d && \
     mkdir -p /var/lib/zabbix && \
     mkdir -p /var/lib/zabbix/enc && \
-    mkdir -p /var/lib/zabbix/export && \
-    mkdir -p /var/lib/zabbix/mibs && \
     mkdir -p /var/lib/zabbix/modules && \
-    mkdir -p /var/lib/zabbix/snmptraps && \
-    mkdir -p /var/lib/zabbix/ssh_keys && \
-    mkdir -p /var/lib/zabbix/ssl && \
-    mkdir -p /var/lib/zabbix/ssl/certs && \
-    mkdir -p /var/lib/zabbix/ssl/keys && \
-    mkdir -p /var/lib/zabbix/ssl/ssl_ca && \
-    mkdir -p /usr/lib/zabbix/alertscripts && \
-    mkdir -p /usr/lib/zabbix/externalscripts && \
-    mkdir -p /usr/share/doc/zabbix-server-mysql && \
     yum --quiet makecache && \
-    yum -y install --setopt=tsflags=nodocs https://repo.zabbix.com/non-supported/rhel/7/x86_64/iksemel-1.4-2.el7.centos.x86_64.rpm && \
-    yum -y install epel-release && \
     yum -y install --setopt=tsflags=nodocs \
-            fping \
             tzdata \
-            iputils \
-            traceroute \
+            libldap \
             libcurl \
-            libevent \
-            libssh \
-            libxml2 \
-            mariadb \
-            net-snmp-libs \
-            OpenIPMI-libs \
-            openldap \
-            openssl-libs \
-            pcre \
-            unixODBC && \
+            openssl-libs && \
     curl -L "https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini" -o /sbin/tini && \
     curl -L "https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini.asc" -o /tmp/tini.asc && \
     export GNUPGHOME="$(mktemp -d)" && \
@@ -82,34 +61,17 @@ ARG MAJOR_VERSION=4.0
 ARG ZBX_VERSION=${MAJOR_VERSION}.27
 ARG ZBX_SOURCES=https://git.zabbix.com/scm/zbx/zabbix.git
 
-ENV TERM=xterm MIBDIRS=/usr/share/snmp/mibs:/var/lib/zabbix/mibs MIBS=+ALL \
-    ZBX_VERSION=${ZBX_VERSION} ZBX_SOURCES=${ZBX_SOURCES}
-
-RUN echo zabbix | passwd --stdin zabbix && \
-    yum -y install vim sudo && \
-    mkdir -p /etc/zabbix/scripts && \
-    mkdir -p /etc/zabbix/conf.d && \
-    setfacl -Rm u:zabbix:rwx /etc/zabbix/ && \
-    setfacl -m d:u:zabbix:rwx /etc/zabbix/
-
 RUN set -eux && \
     yum --quiet makecache && \
-    yum -y install https://repo.zabbix.com/non-supported/rhel/7/x86_64/iksemel-devel-1.4-2.el7.centos.x86_64.rpm --setopt=tsflags=nodocs && \
     yum -y install --setopt=tsflags=nodocs \
             autoconf \
             automake \
-            gcc \
             libcurl-devel \
-            libevent-devel \
-            libssh-devel \
-            libxml2-devel \
             make \
-            mariadb-devel \
-            net-snmp-devel \
-            OpenIPMI-devel \
+            openssl-devel \
             openldap-devel \
             git \
-            unixODBC-devel && \
+            gcc && \
     cd /tmp/ && \
     git clone ${ZBX_SOURCES} --branch ${ZBX_VERSION} --depth 1 --single-branch zabbix-${ZBX_VERSION} && \
     cd /tmp/zabbix-${ZBX_VERSION} && \
@@ -122,47 +84,33 @@ RUN set -eux && \
             --libdir=/usr/lib/zabbix \
             --prefix=/usr \
             --sysconfdir=/etc/zabbix \
+            --prefix=/usr \
             --enable-agent \
-            --enable-server \
-            --with-mysql \
-            --with-jabber \
-            --with-ldap \
             --with-libcurl \
-            --with-libxml2 \
-            --with-net-snmp \
-            --with-openipmi \
+            --with-ldap \
             --with-openssl \
-            --with-ssh \
-            --with-unixodbc \
             --enable-ipv6 \
             --silent && \
-    make -j"$(nproc)" -s dbschema && \
     make -j"$(nproc)" -s && \
-    cp src/zabbix_server/zabbix_server /usr/sbin/zabbix_server && \
-    cp src/zabbix_get/zabbix_get /usr/bin/zabbix_get && \
-    cp src/zabbix_sender/zabbix_sender /usr/bin/zabbix_sender && \
-    cp conf/zabbix_server.conf /etc/zabbix/zabbix_server.conf && \
-    # cat database/mysql/schema.sql > database/mysql/create.sql && \
-    # cat database/mysql/images.sql >> database/mysql/create.sql && \
-    # cat database/mysql/data.sql >> database/mysql/create.sql && \
-    # gzip database/mysql/create.sql && \
-    # cp database/mysql/create.sql.gz /usr/share/doc/zabbix-server-mysql/ && \
+    cp /tmp/zabbix-${ZBX_VERSION}/src/zabbix_agent/zabbix_agentd /usr/sbin/zabbix_agentd && \
+    cp /tmp/zabbix-${ZBX_VERSION}/src/zabbix_get/zabbix_get /usr/bin/zabbix_get && \
+    cp /tmp/zabbix-${ZBX_VERSION}/src/zabbix_sender/zabbix_sender /usr/bin/zabbix_sender && \
+    cp /tmp/zabbix-${ZBX_VERSION}/conf/zabbix_agentd.conf /etc/zabbix/zabbix_agentd.conf && \
     cd /tmp/ && \
     rm -rf /tmp/zabbix-${ZBX_VERSION}/ && \
+    yum -y history undo `yum -q history | sed -n 3p |column -t | cut -d' ' -f1` && \
+    yum -y clean all && \
     chown --quiet -R zabbix:root /etc/zabbix/ /var/lib/zabbix/ && \
     chgrp -R 0 /etc/zabbix/ /var/lib/zabbix/ && \
     chmod -R g=u /etc/zabbix/ /var/lib/zabbix/ && \
-    yum -y history undo `yum -q history | sed -n 3p |column -t | cut -d' ' -f1` && \
-    yum -y clean all && \
     rm -rf /var/cache/yum /var/lib/yum/yumdb/* /usr/lib/udev/hwdb.d/* && \
     rm -rf /etc/udev/hwdb.bin /root/.pki
 
-EXPOSE 10051/TCP
+RUN echo zabbix | passwd --stdin zabbix
+
+EXPOSE 10050/TCP
 
 WORKDIR /var/lib/zabbix
-
-# VOLUME ["/var/lib/zabbix/snmptraps", "/var/lib/zabbix/export"]
-VOLUME ["/etc/zabbix"]
 
 COPY ["init/docker-entrypoint.sh", "/usr/bin/"]
 
@@ -170,4 +118,4 @@ ENTRYPOINT ["/sbin/tini", "--", "/usr/bin/docker-entrypoint.sh"]
 
 USER 1997
 
-CMD ["/usr/sbin/zabbix_server", "--foreground", "-c", "/etc/zabbix/zabbix_server.conf"]
+CMD ["/usr/sbin/zabbix_agentd", "--foreground", "-c", "/etc/zabbix/zabbix_agentd.conf"]
